# Ability

./: .editorconfig  .pre-commit-config.yaml  README.md
.github/workflows/: build-frontend.yml  deploy-backend.yml  deploy-frontend.yml  lint-backend.yml  test-backend.yml
backend/: .env.example  .gitignore  .ruff.toml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/app/: asgi.py  backend_pre_start.py  initial_data.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: apps.py  auth.py  chat.py  comments.py  feeds.py  upload.py  users.py
backend/app/core/: config.py  db.py
backend/app/e2b/: CLAUDE.md  build_template.py  test_sandbox.py
backend/app/email-templates/: magic_link.html
backend/app/models/: app.py  auth.py  comment.py  common.py  sandbox.py  user.py
backend/app/services/: app_service.py  auth_service.py  comment_service.py  sandbox_service.py
backend/app/utils/: chat.py  common.py  lock.py  net.py
backend/tests/utils/: test_chat.py  test_lock.py
frontend/: .env.example  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.css  main.ts
frontend/src/components/: AppComments.vue  AppItem.vue  AppItemSkeleton.vue  AppPreview.vue  CreateSection.vue  DefaultAvatar.vue  EditAppItem.vue  EditProfile.vue  Footer.vue  Header.vue  IconOrb.vue  LoadingButton.vue  Login.vue  Logo.vue  Modal.vue  Skeleton.vue  Tabbar.vue  UploadImage.vue
frontend/src/composables/: app.ts  auth.ts  tool.ts  user.ts
frontend/src/config/: location.ts
(+33 files in other folders)
