[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "x-backend"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "anyio==4.11.0",
  "fastapi[standard]==0.122.0",
  "python-multipart==0.0.20",
  "email-validator<3.0.0.0,>=2.1.0.post1",
  "passlib[bcrypt]<2.0.0,>=1.7.4",
  "tenacity<9.0.0,>=8.2.3",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "emails<1.0,>=0.6",
  "alembic<2.0.0,>=1.14.0",
  "httpx==0.28.1",
  "python-dotenv==1.2.1",
  "asyncpg==0.31.0",
  "sqlalchemy[asyncio]==2.0.44",
  "sqlmodel==0.0.27",
  "supabase==2.24.0",
  # Pin bcrypt until passlib supports the latest
  "bcrypt==4.3.0",
  # "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
  "Authlib==1.6.5",
  "e2b==2.8.0",
  "loguru==0.7.3",
  "anthropic==0.75.0",
  "replicate==1.0.7",
  "Pillow==12.0.0",
]

[project.optional-dependencies]
test = ["pytest==9.0.2"]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
anyio_mode = "auto"
